src/pages/homePage/HomePage.module.css
.title {
    padding: 1rem;
    font-weight: 300;
}

.presentation,
.infoBox,
.maps {
    text-align: center;
}

/* hero */
.hero {
    position: relative;
    top: -60px;
}

.hero video {
    width: 100%;
    height: 100vh;
    object-fit: cover;
}

.hero .textBox {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
}

.hero .textBox p {
    color: var(--primary-white);
    font-size: 1.5rem;
    line-height: 2rem;
    text-transform: uppercase;
    text-align: center;
}

.hero .arrowBox {
    position: absolute;
    bottom: 4%;
    left: 50%;
    transform: translate(-50%, -5%);
    animation: moveUpDown 3s infinite;
}

.arrowBox img {
    height: 5rem;
}

@keyframes moveUpDown {

    0%,
    100% {
        bottom: 4%;
    }

    50% {
        bottom: 0%;
    }
}

/* layout containers */
.boxLayout {
    display: flex;
    border-top: 1px solid var(--primary-brown);
    border-bottom: 1px solid var(--primary-brown);
    padding: 0 40px;
}


@media (max-width: 992px) {
    .boxLayout {
        padding: 0;
    }
}

@media (max-width:768px) {
    .boxLayout {
        display: block;
        padding: 0 20px;
    }

    .boxLayout div {
        margin-bottom: 1rem;
    }

    .boxLayout,
    .boxLayout div,
    .boxLayout .textBox p {
        border: none !important;
        padding: 0;
    }
}

.boxLayout div {
    flex: 1;
    width: 100%;
    object-fit: fill;
}

.boxLayout div p {
    padding: 0.5rem 0;
}

.presentation .boxLayout div {
    border-left: 1px solid var(--primary-brown);
    border-right: 0.5px solid var(--primary-brown);
}


/* imgBox */
.imgBox {
    display: none;
}

.presentation .boxLayout .imgBox {
    display: block;
}


@media (max-width:768px) {
    .imgBox {
        display: block;
    }

    .presentation .boxLayout .imgBox {
        display: none;
    }

}

.imgBox img {
    display: block;
    width: 100%;
    aspect-ratio: 3/2;
    object-fit: cover;
}


/* textBox */
.presentation .boxLayout .textBox {
    display: flex;
    align-items: center;
    line-height: 1.8rem;
}

.boxLayout .textBox p {
    padding: 0 3rem;
}





/* boxLink */
.boxLink {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 25rem;
}

/* btnStyle */
.btnStyle {
    cursor: pointer;
    font-weight: 600;
    padding: 0.7rem 3rem;
    border: 1px solid var(--primary-brown);
    background-color: var(--secondary-white);
    transition: background-color 0.3s ease;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
    z-index: 2;
}

.btnStyle:hover {
    background-color: #fefdfc;
}

.btnStyle:active {
    background-color: var(--secondary-white);
}

.btnStyle a {
    color: var(--primary-brown);
}

/* peel */
.peel {
    position: absolute;
    top: 50%;
    width: 14rem;
    z-index: 0;
}

/* leftPeel */
.leftPeelStatic {
    transform: rotateZ(60deg) translateX(-40%) translateY(70%);
}

/* rightPeel */
.rightPeelStatic {
    transform: rotateZ(120deg) translateX(-40%) translateY(-70%);
}

.leftPeelDinamic {
    animation: animationPeelLeft 3s ease-in-out;
}

.rightPeelDinamic {
    animation: animationPeelRight 3s ease-in-out;
}

@keyframes animationPeelLeft {

    0% {
        transform: rotateZ(60deg) translateX(-40%) translateY(70%);
    }

    25% {
        transform: rotateZ(90deg) translateX(-20%);
    }

    40% {
        transform: rotateZ(90deg) translateX(-20%) rotateY(50deg);
    }

    60% {
        transform: rotateZ(90deg) translateX(-20%) rotateY(50deg) translate3d(0, 0, 10px);
    }

    70% {

        transform: rotateZ(90deg) translateX(-20%) rotateY(50deg) translate3d(0, 0, -20px);
    }

    100% {
        transform: rotateZ(90deg) translateX(-25%);
    }
}

@keyframes animationPeelRight {

    0% {
        transform: rotateZ(120deg) translateX(-40%) translateY(-70%);
    }

    25% {
        transform: rotateZ(90deg) translateX(-20%);

    }

    40% {
        transform: rotateZ(90deg) translateX(-20%) rotateY(50deg);
    }

    60% {

        transform: rotateZ(90deg) translateX(-20%) rotateY(50deg) translate3d(0, 0, 10px);
    }

    70% {

        transform: rotateZ(90deg) translateX(-20%) rotateY(50deg) translate3d(0, 0, -20px);
    }

    100% {
        transform: rotateZ(90deg) translateX(-25%);
    }
}


/* infoBox */
.infoBox .where {
    flex: 2;
    order: 2;
    border-left: 1px solid var(--primary-brown);
    border-right: 1px solid var(--primary-brown);
}

.where .types {
    display: flex;
}

.types .typeBox {
    width: 100%;
}

.types .typeBox img {
    width: 100%;
    max-width: 3rem;
    min-height: 3rem;
}

.infoBox .when {
    order: 1;
    border-left: 1px solid var(--primary-brown);
}

.infoBox .when p:nth-child(2) {
    font-weight: 500;
}

.infoBox .contact {
    order: 3;
    border-right: 1px solid var(--primary-brown);
}

.infoBox .contact a{
    color: var(--primary-brown);
    border-bottom: 1px solid var(--primary-brown);
}

@media (max-width: 992px) {

    .infoBox .when,
    .infoBox .contact {
        border: none;
    }
}

@media (max-width: 768px) {

    .infoBox .where {
        border: none;
    }

    .where .types {
        margin: 0;
    }
}

/* maps */
.maps {
    margin: 1rem 0 4rem 0;
}

@media (max-width: 768px) {
    .maps {
        margin: 0;
    }
}



/* mapBox */
.mapBox {
    position: relative;
    width: 70%;
    padding: 1rem;
    margin: 0 auto;
    background-color: var(--secondary-white);
    border: 1px solid var(--primary-brown);
}

.mapBox img {
    width: 100%;
}

.mapBox button {
    background-color: #fefdfc98;
    position: absolute;
    bottom: 2.5rem;
    left: 50%;
    transform: translateX(-50%);
}

@media (max-width: 768px) {
    .mapBox {
        width: 100%;
        padding: 0;
        border: none;
    }
}

